- Sat Sep 02 2000 Jack Moffitt <jack@icecast.org>
	+ separated from vorbis